# voice_sql_report

./: .editorconfig  .eslintrc  .gitignore  .pre-commit-config.yaml  README.md  license.txt  pyproject.toml
voice_sql_report/: hooks.py  modules.txt
voice_sql_report/api/: agent_query.py  voice_query.py
voice_sql_report/config/: desktop.py
voice_sql_report/page/voice_report/: voice_report.js  voice_report.json
voice_sql_report/voice_sql_report/doctype/voice_report_log/: voice_report_log.json  voice_report_log.py
voice_sql_report/voice_sql_report/page/agent_report/: agent_report.js  agent_report.json
